syntax = "proto3";

package pokemon;

option go_package = "pokemon";

service MoveService {
}

message Move {
  int32 id = 1;
  string name = 2;
}